Fix for White Space Issue #11
row class from bootstrap was causing problem. It has been modified to
correct the issue.

--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,11 @@
 		display:none;
 	}
 }
+/**Fix for white space**/
+.row{
+	margin-right:0px;
+}
+
 /** General CSS **/
 section{
 	padding-bottom:20px;
